Bug 149231 - Crash on print preview of master document (Linux)
Summary: Crash on print preview of master document (Linux)
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.3.0.0.alpha1+
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: Jim Raykowski
URL:
Whiteboard: target:7.4.0 target:7.3.5 target:7.3.4
Keywords: bibisected, bisected, haveBacktrace, regression
Depends on:
Blocks: Writer-Master-Doc
  Show dependency treegraph
 
Reported: 2022-05-22 10:13 UTC by Olivier Hallot
Modified: 2022-06-01 17:11 UTC (History)
4 users (show)

See Also:
Crash report or crash signature: ["SwGlobalTree::LinkStubTimeout(void%20*,Timer%20*)"]
Regression By:


Attachments
Master document (4.30 MB, application/vnd.oasis.opendocument.text-master)
2022-05-22 10:13 UTC, Olivier Hallot
Details
Chapter file (274.34 KB, application/vnd.oasis.opendocument.text)
2022-05-22 10:15 UTC, Olivier Hallot
Details
bt with debug symbols (2.40 KB, text/plain)
2022-05-22 21:39 UTC, Julien Nabet
Details
bt with debug symbols (kf5) (3.47 KB, text/plain)
2022-05-22 21:41 UTC, Julien Nabet
Details
bt with debug symbols (gen) (2.27 KB, text/plain)
2022-05-22 21:42 UTC, Julien Nabet
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Olivier Hallot 2022-05-22 10:13:10 UTC
Created attachment 180295 [details]
Master document

The following crash occurred when opening the print preview of the attached document.

https://crashreport.libreoffice.org/stats/crash_details/a0d65340-b854-424e-bdda-de7d5e6dedc6

Open the master document, 
accept update of links, 
click Print Preview

Results: crash

Version: 7.3.3.2 / LibreOffice Community
Build ID: d1d0ea68f081ee2800a922cac8f79445e4603348
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: kf5 (cairo+xcb)
Locale: en-US (pt_BR.UTF-8); UI: en-US
Calc: threaded
Comment 1 Olivier Hallot 2022-05-22 10:15:13 UTC
Created attachment 180296 [details]
Chapter file
Comment 2 Telesto 2022-05-22 19:55:09 UTC
No repro on Windows
Version: 7.4.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: cdf8e971d5d46df4bcab35a99c4254df9459213f
CPU threads: 4; OS: Windows 6.3 Build 9600; UI render: Skia/Raster; VCL: win
Locale: en-US (nl_NL); UI: en-GB
Calc: CL Jumbo
Comment 3 Julien Nabet 2022-05-22 21:39:52 UTC
Created attachment 180303 [details]
bt with debug symbols

On pc Debian x86-64 with master sources updated today +gtk3 rendering, I got a crash.

I noticed these logs:
warn:legacy.osl:22612:22612:sw/source/core/access/accpage.cxx:53: bSelected out of sync
warn:legacy.osl:22612:22612:sw/source/core/access/accpage.cxx:53: bSelected out of sync

I also noticed that if I toggle off the navigator (which displays automatically), I don't reproduce the crash.
However when closing preview, the navigator comes back.
Then, same thing, either I try to launch preview by letting the navigator opened and it crashes or I launch it after having closed the navigator again.
Comment 4 Julien Nabet 2022-05-22 21:41:22 UTC
Created attachment 180304 [details]
bt with debug symbols (kf5)

I got the same with kf5 rendering except logs:
warn:legacy.osl:22612:22612:sw/source/core/access/accpage.cxx:53: bSelected out of sync
Comment 5 Julien Nabet 2022-05-22 21:42:42 UTC
Created attachment 180305 [details]
bt with debug symbols (gen)

Idem with gen rendering.
Comment 6 Buovjaga 2022-05-23 09:44:42 UTC
Bibisected with linux-64-7.3 to https://git.libreoffice.org/core/commit/1f9a792a391f0811bbb5f570ad5c84d13312c539

tdf#144349 Make Navigator global tree track sub-document sections

It does match with how the backtrace talks about sw/source/uibase/utlui/glbltree.cxx
Comment 7 Jim Raykowski 2022-05-24 02:12:56 UTC
Thanks all. Looking at the comments made in https://gerrit.libreoffice.org/c/core/+/122103, I see that I was suspicious of that patch. Here is another go at it. This one doesn't crash for the steps given to repro the crash:
https://gerrit.libreoffice.org/c/core/+/134846
Comment 8 Commit Notification 2022-05-24 04:25:15 UTC
Jim Raykowski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/f817b3de1aa827d93e2a622735c4d570514f4849

tdf#149231 Fix crash on print preview of master

It will be available in 7.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Buovjaga 2022-05-24 05:06:13 UTC
Doesn't crash anymore, thanks.

Arch Linux 64-bit
Version: 7.4.0.0.alpha1+ / LibreOffice Community
Build ID: f817b3de1aa827d93e2a622735c4d570514f4849
CPU threads: 8; OS: Linux 5.17; UI render: default; VCL: kf5 (cairo+xcb)
Locale: fi-FI (fi_FI.UTF-8); UI: en-US
Calc: threaded
Built on 24 May 2022
Comment 10 Julien Nabet 2022-05-24 06:54:06 UTC
On pc Debian x86-64 with master sources updated today, I confirm I don't reproduce the crash with the 3 renderings (gtk3, kf5 and gen).
Thank you Jim!
Comment 11 Commit Notification 2022-05-24 09:36:22 UTC
Jim Raykowski committed a patch related to this issue.
It has been pushed to "libreoffice-7-3":

https://git.libreoffice.org/core/commit/ee67c82c210ec4bcac0a6e92a13dc63b06006239

tdf#149231 Fix crash on print preview of master

It will be available in 7.3.5.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 12 Commit Notification 2022-06-01 17:11:25 UTC
Jim Raykowski committed a patch related to this issue.
It has been pushed to "libreoffice-7-3-4":

https://git.libreoffice.org/core/commit/ad55cb3e5550ea92f2aee4bd424065436a900221

tdf#149231 Fix crash on print preview of master

It will be available in 7.3.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.