tdf#149231 Fix crash on print preview of master

caused by commit 1f9a792a391f0811bbb5f570ad5c84d13312c539.

Change-Id: Iecfa019b04b84bb70b5e04af51f9f786d7cd9fdf
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/134846
Tested-by: Jenkins
Reviewed-by: Jim Raykowski <raykowj@gmail.com>
(cherry picked from commit f817b3de1aa827d93e2a622735c4d570514f4849)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/134788
Reviewed-by: Michael Stahl <michael.stahl@allotropia.de>
(cherry picked from commit ee67c82c210ec4bcac0a6e92a13dc63b06006239)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/134907
Reviewed-by: Miklos Vajna <vmiklos@collabora.com>
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>
Reviewed-by: Thorsten Behrens <thorsten.behrens@allotropia.de>
Tested-by: Thorsten Behrens <thorsten.behrens@allotropia.de>